revert toList that block the list
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>