@@ -95,8 +95,7 @@ public class PsseValidation {
             }
         }
 
-        for (int i = 0; i < psseBuses.size(); i++) {
-            PsseBus psseBus = psseBuses.get(i);
+        for (PsseBus psseBus : psseBuses) {
             if (psseBus.getI() < 1 || psseBus.getI() > 999997) {
                 warnings.add(String.format("Bus: Unexpected I: %d", psseBus.getI()));
                 validCase = false;
@@ -111,8 +110,7 @@ public class PsseValidation {
     private void validateLoads(List<PsseLoad> loads, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesLoads = new HashMap<>();
 
-        for (int i = 0; i < loads.size(); i++) {
-            PsseLoad load = loads.get(i);
+        for (PsseLoad load : loads) {
             if (!buses.containsKey(load.getI())) {
                 warnings.add(String.format("Load: Unexpected I: %d", load.getI()));
                 validCase = false;
@@ -126,8 +124,7 @@ public class PsseValidation {
     private void validateFixedShunts(List<PsseFixedShunt> fixedShunts, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesFixedShunts = new HashMap<>();
 
-        for (int i = 0; i < fixedShunts.size(); i++) {
-            PsseFixedShunt fixedShunt = fixedShunts.get(i);
+        for (PsseFixedShunt fixedShunt : fixedShunts) {
             if (!buses.containsKey(fixedShunt.getI())) {
                 warnings.add(String.format("FixedShunt: Unexpected I: %d", fixedShunt.getI()));
                 validCase = false;
@@ -142,8 +139,7 @@ public class PsseValidation {
 
         Map<String, List<String>> busesGenerators = new HashMap<>();
 
-        for (int i = 0; i < generators.size(); i++) {
-            PsseGenerator generator = generators.get(i);
+        for (PsseGenerator generator : generators) {
             if (!buses.containsKey(generator.getI())) {
                 warnings.add(String.format("Generator: Unexpected I: %d", generator.getI()));
                 validCase = false;
@@ -181,8 +177,7 @@ public class PsseValidation {
     private void validateNonTransformerBranches(List<PsseNonTransformerBranch> nonTransformerBranches, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesNonTransformerBranches = new HashMap<>();
 
-        for (int i = 0; i < nonTransformerBranches.size(); i++) {
-            PsseNonTransformerBranch nonTransformerBranch = nonTransformerBranches.get(i);
+        for (PsseNonTransformerBranch nonTransformerBranch : nonTransformerBranches) {
             if (!buses.containsKey(nonTransformerBranch.getI())) {
                 warnings.add(String.format("NonTransformerBranch: Unexpected I: %d", nonTransformerBranch.getI()));
                 validCase = false;
@@ -203,19 +198,18 @@ public class PsseValidation {
 
     private void validateTransformers(List<PsseTransformer> transformers, Map<Integer, List<Integer>> buses) {
         List<PsseTransformer> twoWinddingsTransformers = transformers.parallelStream()
-            .filter(transformer -> transformer.getK() == 0).collect(Collectors.toList());
+            .filter(transformer -> transformer.getK() == 0).toList();
         validateTwoWindingsTransformers(twoWinddingsTransformers, buses);
 
         List<PsseTransformer> threeWinddingsTransformers = transformers.parallelStream()
-            .filter(transformer -> transformer.getK() != 0).collect(Collectors.toList());
+            .filter(transformer -> transformer.getK() != 0).toList();
         validateThreeWindingsTransformers(threeWinddingsTransformers, buses);
     }
 
     private void validateTwoWindingsTransformers(List<PsseTransformer> transformers, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesTransformers = new HashMap<>();
 
-        for (int i = 0; i < transformers.size(); i++) {
-            PsseTransformer transformer = transformers.get(i);
+        for (PsseTransformer transformer : transformers) {
             validateTransformerBus(buses, transformer.getI(), "I");
             validateTransformerBus(buses, transformer.getJ(), "J");
 
@@ -236,8 +230,7 @@ public class PsseValidation {
     private void validateThreeWindingsTransformers(List<PsseTransformer> transformers, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesTransformers = new HashMap<>();
 
-        for (int i = 0; i < transformers.size(); i++) {
-            PsseTransformer transformer = transformers.get(i);
+        for (PsseTransformer transformer : transformers) {
             validateTransformerBus(buses, transformer.getI(), "I");
             validateTransformerBus(buses, transformer.getJ(), "J");
             validateTransformerBus(buses, transformer.getK(), "K");
@@ -340,8 +333,7 @@ public class PsseValidation {
     private void validateSwitchedShunts(List<PsseSwitchedShunt> switchedShunts, Map<Integer, List<Integer>> buses, PsseVersion psseVersion) {
         Map<String, List<String>> busesSwitchedShunts = new HashMap<>();
 
-        for (int i = 0; i < switchedShunts.size(); i++) {
-            PsseSwitchedShunt switchedShunt = switchedShunts.get(i);
+        for (PsseSwitchedShunt switchedShunt : switchedShunts) {
             if (!buses.containsKey(switchedShunt.getI())) {
                 warnings.add(String.format("SwitchedShunt: Unexpected I: %d", switchedShunt.getI()));
                 validCase = false;
@@ -457,17 +449,17 @@ public class PsseValidation {
 
     private static int firstBus(String busKey) {
         String[] tokens = busKey.split("-");
-        return Integer.valueOf(tokens[0]);
+        return Integer.parseInt(tokens[0]);
     }
 
     private static int secondBus(String busKey) {
         String[] tokens = busKey.split("-");
-        return Integer.valueOf(tokens[1]);
+        return Integer.parseInt(tokens[1]);
     }
 
     private static int thirdBus(String busKey) {
         String[] tokens = busKey.split("-");
-        return Integer.valueOf(tokens[2]);
+        return Integer.parseInt(tokens[2]);
     }
 
     private void checkDuplicates(String tag, String tagEquipments, Map<String, List<String>> duplicatedBusesEquipments) {
